# competition

./: .gitignore  README.md  规则手册.doc  说明书.txt
D2C2/: README.md
D2C2/inference/: centernet_r18d2c2_fp16.engine
D2C2/scripts/: convert_to_tensorrt.sh
D2C2/train/: requirements_train.txt  train_2class.py
src/go/: .clang-format  CMakeLists.txt  CODING_STYLE.md  package.xml
src/go/config/: game_config.yaml
src/go/src/: config_manager.cpp  config_manager.h  go_d2c2.cpp  go_d2c2.cpp.bak  path_strategy.cpp  path_strategy.h  performance_monitor.h  waypoint.h
tdt_interface/: CMakeLists.txt
